--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "moment": "^2.29.3",
+    "node-sass": "^7.0.1",
     "node-scss": "^7.0.3",
     "react": "^18.1.0",
     "react-bootstrap-icons": "^1.8.2",
